RESOLVED FIXED313906
REGRESSION(310280@main): [iPhone] Fullscreen does not work on NFL.com
https://bugs.webkit.org/show_bug.cgi?id=313906
Summary REGRESSION(310280@main): [iPhone] Fullscreen does not work on NFL.com
Jer Noble
Reported 2026-05-02 12:28:51 PDT
REGRESSION(310280@main): [iPhone] Fullscreen does not work on NFL.com
Attachments
Jer Noble
Comment 1 2026-05-02 12:28:52 PDT
Jer Noble
Comment 2 2026-05-02 12:34:04 PDT
Jer Noble
Comment 3 2026-05-02 17:16:35 PDT
EWS
Comment 4 2026-05-04 12:22:42 PDT
Committed 312540@main (332462f1fd52): <https://commits.webkit.org/312540@main> Reviewed commits have been landed. Closing PR #64110 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.