REGRESSION(310280@main): [iPhone] Fullscreen does not work on NFL.com rdar://154879148 https://bugs.webkit.org/show_bug.cgi?id=313906

Reviewed by Eric Carlson.

In 310280@main, NFL.com was quirked to report the Android UA, so that it would
have correct caption tracks. However, this broke the ability to enter fullscreen
as NFL.com expected Android devices to support the fullscreen API.

Change the caption quirk to instead directly address the root cause of the caption
bug: the NFL.com HLS streams list a subtitle track whose contents are entirely empty.
The presence of this track suppresses the discovery of embedded CEA-608 caption
information. On iPad, macOS, and Android, NFL.com parses these captions out of the
transport stream for each video, but on iPhone it depends upon the native player
extracting these captions.

Add a quirk that will edit the HLS playlist itself before it's delivered to
AVFoundation, to remove all references to the non-functional Subtitle track.

* Source/WebCore/loader/MediaResourceLoader.cpp:
(WebCore::MediaResourceLoader::requestResource):
(WebCore::MediaResource::sendPartialPlaylistLine):
(WebCore::MediaResource::dataReceived):
(WebCore::MediaResource::notifyFinished):
* Source/WebCore/loader/MediaResourceLoader.h:
(WebCore::MediaResource::setShouldSuppressHLSSubtitles):
* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::effectiveContentModeAfterAdjustingPolicies):

Canonical link: https://commits.webkit.org/312540@main